force-app/main/default/objects/TimeSheet_Setting__c/TimeSheet_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Basic Setting for timeSheet</description>
    <label>TimeSheet Setting</label>
</CustomObject>