force-app/main/default/objects/TimeSheet_Setting__c/fields/Custom_Hoilday__c.field-meta.xml
<CustomField>
    <fullName>Custom_Hoilday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Hoilday</label>
    <type>Checkbox</type>
</CustomField>