force-app/main/default/objects/TimeSheet_Setting__c/fields/Custom_Leave__c.field-meta.xml
<CustomField>
    <fullName>Custom_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Leave</label>
    <type>Checkbox</type>
</CustomField>