force-app/main/default/objects/TimeSheet_Setting__c/fields/Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Date_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Show Date only on  the label ,like 2019-2-11</inlineHelpText>
    <label>Date Only</label>
    <type>Checkbox</type>
</CustomField>