force-app/main/default/objects/TimeSheet_Setting__c/fields/Day_Only__c.field-meta.xml
<CustomField>
    <fullName>Day_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show Day as Label ,example Monday,Tueday</description>
    <inlineHelpText>Show Day as Label ,example Monday,Tueday</inlineHelpText>
    <label>Day Only</label>
    <type>Checkbox</type>
</CustomField>