force-app/main/default/objects/TimeSheet_Setting__c/fields/Default_Interval__c.field-meta.xml
<CustomField>
    <fullName>Default_Interval__c</fullName>
    <label>Default Interval</label>
    <length>100</length>
    <type>Text</type>
</CustomField>