force-app/main/default/objects/TimeSheet_Setting__c/fields/Disable_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Disable_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Approval Process</label>
    <type>Checkbox</type>
</CustomField>