force-app/main/default/objects/TimeSheet_Setting__c/fields/Disable_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Disable_Overlap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Overlap</label>
    <type>Checkbox</type>
</CustomField>