force-app/main/default/objects/TimeSheet_Setting__c/fields/EmployeeField__c.field-meta.xml
<CustomField>
    <fullName>EmployeeField__c</fullName>
    <description>The field hold the Lookup field name for the employee for which the time entry will be done.</description>
    <inlineHelpText>The field hold the Lookup field name for the employee for which the time entry will be done.By default the user will be the employee but some can choose other object.</inlineHelpText>
    <label>Employee Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>