force-app/main/default/objects/TimeSheet_Setting__c/fields/Entry_Project_Field__c.field-meta.xml
<CustomField>
    <fullName>Entry_Project_Field__c</fullName>
    <label>Entry Project Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>