force-app/main/default/objects/TimeSheet_Setting__c/fields/Entry_Task_Field__c.field-meta.xml
<CustomField>
    <fullName>Entry_Task_Field__c</fullName>
    <label>Entry Task Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>