force-app/main/default/objects/TimeSheet_Setting__c/fields/Hide_Task__c.field-meta.xml
<CustomField>
    <fullName>Hide_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Task</label>
    <type>Checkbox</type>
</CustomField>