force-app/main/default/objects/TimeSheet_Setting__c/fields/Holiday_Check__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday Check</label>
    <type>Checkbox</type>
</CustomField>