force-app/main/default/objects/TimeSheet_Setting__c/fields/Leave_Check__c.field-meta.xml
<CustomField>
    <fullName>Leave_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leave Check</label>
    <type>Checkbox</type>
</CustomField>