force-app/main/default/objects/TimeSheet_Setting__c/fields/Project_Field__c.field-meta.xml
<CustomField>
    <fullName>Project_Field__c</fullName>
    <description>The Project is to override the Project lookup on TimeSheet, Admin can create lookup on TimeSheet for any sobject and put the field name in the field to use the sobejct as Project.By default TimeSheet-Project is used.</description>
    <inlineHelpText>The Project is to override the Project lookup on TimeSheet, Admin can create lookup on TimeSheet for any sobject and put the field name in the field to use the sobejct as Project.By default TimeSheet-Project is used.</inlineHelpText>
    <label>Project Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>