force-app/main/default/objects/TimeSheet_Setting__c/fields/Week_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Day__c</fullName>
    <label>Week Start Day</label>
    <length>100</length>
    <type>Text</type>
</CustomField>